[metadata]
name = tars-data-models-timhealz
version = 0.0.1
author = Tim Healy
author_email = healyt22@gmail.com
description = Package for storing SQLAlchemy data models used across apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timhealz/tars-data-models
project_urls =
    Bug Tracker = https://github.com/timhealz/tars-data-models/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    SQLAlchemy==1.3.24

[options.packages.find]
where = src